--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
        - 8002:1433
     environment:
        - ACCEPT_EULA=Y
-       - SA_PASSWORD=
+       - SA_PASSWORD=password@12345
     networks:
        - demobanknetwork
 
@@ -29,8 +29,8 @@ services:
       - demoappdb
     environment:
       - DB_HOST=demoappdb
-      - DB_NAME=demoappdb
-      - DB_SA_PASSORD=demoappdb
+      - DB_NAME=appdb
+      - DB_SA_PASSORD=password@12345
     networks:
       - demobanknetwork
 
